Tech-debt files: rename + merge for clearer organization
Rename misc/dev/audit-post-2.5.1.md -> backlog.md.

The file is no longer a frozen post-audit snapshot — most of the original
entries have shipped, the rest have been continuously curated, and the
"post-2.5.1 audit" framing makes it look archival when it's actually the
live punch list. Rewrite the intro to position it as the ongoing backlog,
companion to technical-debt.md (long-form analyses).

Drop dated-decision noise ("(decision 2026-05-21/22)") from the Not-wanted
markers — the label alone is sufficient and the dates make the file read
like a journal. Drop the now-obsolete "Top next steps" section.

Merge misc/todo/pocket_grid/IDEAS.md + NOTES.md -> FOLLOWUP.md.

Both files were post-ship pocket-grid follow-up work with the same audience
and scope. Combine into one with two top-level sections (Future descriptor
ideas + Perf observations). Saves one file in the listing; no content lost.